Fix z-index, input change not firing on selection
Add z-index to datepicker
Trigger change event on input after data selection
Hide datepickers if visible before displaying it

--- a/datepicker.css
+++ b/datepicker.css
@@ -16,6 +16,7 @@
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	z-index: 9999;
 }
 
 .date-picker .header {
@@ -210,7 +211,7 @@
 }
 
 
-.date-picker .main-content .date-selector .dates {
+.date-picker .main-content .date-selector .elite-dp-dates {
 	display: inline-block;
 	height: 145px;
 	margin-top: 5px;
